--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# dotenv environment variables file
+node_modules/
 .env
 
 # Runtime data
